Fixed some styling quirks and forced post titles to be wrapped in h2 only.

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ body {
 	background-color: #f2f2f2; /* UCI custom */
 	color: #444; /* UCI custom */
 	font-family: Helvetica, sans-serif; /* UCI custom */
-	font-size: 18px;
+	font-size: 16px; /* UCI custom */
 	font-weight: 300;
 	line-height: 1.625;
 	margin: 0;
@@ -351,7 +351,7 @@ select,
 textarea {
 	background-color: #fff;
 	border: 1px solid #ddd;
-	color: #444; /* UCI custom */
+	color: #444 !important; /* UCI custom */
 	font-size: 18px;
 	font-weight: 300;
 	padding: 16px;
@@ -1442,7 +1442,7 @@ li.comment {
 }
 
 .sidebar li {
-	border-bottom: 1px solid #ddd; /* UCI custom */
+	border-bottom: none; /* UCI custom */
 	margin-bottom: 10px;
 	padding-bottom: 10px;
 }
